Removed commented out code